<resources>
    <string name="app_name">实验室设备维护信息管理系统</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">此用户名无效</string>
    <string name="error_invalid_password">请输入密码</string>
    <string name="error_incorrect_password">账号或密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="menu_settings">Settings</string>
    <string name="btn1">查看所有货物信息</string>
    <string name="btn2">增加一条货物信息</string>
    <string name="btn3">删除一条货物信息</string>
    <string name="add_hint1">输入添加的货物的名称</string>
    <string name="add_hint2">输入货物的数量</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_hint">输入删除的货物的编号</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnInsert">Insert</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_interface_a_">InterfaceA_Activity</string>
    <string name="title_device">设备管理</string>
    <string name="title_account">人员管理</string>
    <string name="title_notifications">通知</string>
    <string name="prompt_account">请输入账户信息</string>
    <string name="title_activity_account_list">AccountList</string>
    <string name="st_account">人员信息管理</string>
    <string name="st_Check">检验信息管理</string>
    <string name="st_Device">设备信息管理</string>
    <string name="st_Repair">维修信息管理</string>
    <string name="st_Use">使用信息管理</string>
    <string name="sl_account">人员信息搜索</string>
    <string name="sl_Check">检验信息搜索</string>
    <string name="sl_Device">设备信息搜索</string>
    <string name="sl_Repair">维修信息搜索</string>
    <string name="sl_Use">使用信息搜索</string>
    <string name="DB_IP">192.168.1.101</string>

</resources>
