<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Interface.InterfaceA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_account"
            android:backgroundTint="@color/Shampoo"/>

        <Button
            android:id="@+id/btn_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_Device"
            android:backgroundTint="@color/Myosotis"/>

        <Button
            android:id="@+id/btn_repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_Repair"
            android:backgroundTint="@color/Shampoo"/>

        <Button
            android:id="@+id/btn_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_Use"
            android:backgroundTint="@color/Myosotis"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_Check"
            android:backgroundTint="@color/Shampoo"/>

        <Button
            android:id="@+id/sl_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sl_account"
            android:backgroundTint="@color/Myosotis"/>

        <Button
            android:id="@+id/sl_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sl_Device"
            android:backgroundTint="@color/Shampoo"/>

        <Button
            android:id="@+id/sl_repair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sl_Repair"
            android:backgroundTint="@color/Myosotis"/>

        <Button
            android:id="@+id/sl_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sl_Use"
            android:backgroundTint="@color/Shampoo"/>

        <Button
            android:id="@+id/sl_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sl_Check"
            android:backgroundTint="@color/Myosotis"/>
        <Button
            android:id="@+id/btn_checkUseInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="确认使用信息"
            android:backgroundTint="@color/Shampoo"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>